# GenO

./: CMakeLists.txt  README.md
cmake/: FindQt.cmake  Utils.cmake
src/: .gitignore  CMakeLists.txt  GenOConfig.cmake.in  config.h  debug.cpp  global.h  jsonserialization.cpp  jsonserialization.h  object.cpp  object.h  object_p.h  objectinterface.cpp  objectinterface.h  serialization.cpp  serialization.h
src/lib/: CMakeLists.txt  config.h.in  debug_p.h  geno.h  global.h  jsonserialization.cpp  jsonserialization.h  object.cpp  object.h  serialization.cpp
testdata/: agency_data.json
tests/: CMakeLists.txt  agency.cpp  agency.h  jsonserializationtest.cpp  jsonserializationtest.h  jsonstresstest.cpp  jsonstresstest.h  main.cpp  objecttest.cpp  objecttest.h
